Removed probably unnecessary volumes from docker-compose file.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ services:
   gobnilp:
     image: onceltuca/gobnilp:1.6.3
     command: tail -f /dev/null
-    volumes: 
-        - ./workflow/scripts/run_gobnilp.R:/myappdir/run_gobnilp.R
-        - ./results:/myappdir/simresults
+    #volumes: 
+    #    - ./workflow/scripts/run_gobnilp.R:/myappdir/run_gobnilp.R
+    #    - ./results:/myappdir/simresults
   trilearn:
     image: onceltuca/trilearn
     volumes: 
