First mcmc traj obtaied..

--- a/config/config_sample.json
+++ b/config/config_sample.json
@@ -13,7 +13,7 @@
         ],
         "evaluation": {
             "ROC": [
-                "fges-bdeu"
+                "trilearn_loglin"
             ],
             "mcmc_traj":[
                 "trilearn_loglin"
