Added decomposable model sampling. Plotting graphs usin graphviz.

--- a/config/config_sample.json
+++ b/config/config_sample.json
@@ -22,6 +22,10 @@
                 "greenthomas",
                 "guidicigreen"
             ],
+            "graph_plots": [
+                "greenthomas",
+                "guidicigreen"
+            ],
             "autocorr_plots": [
                 "trilearn_loglin"
             ]
