--- a/config/config_sample.json
+++ b/config/config_sample.json
@@ -2,10 +2,10 @@
     "benchmark_setup": {
         "data": [
             {
-                "graph_id": "AR2",
-                "parameters_id": "disc-loglin",
-                "data_id": "iid100",
-                "seed_range": [1, 1]
+                "graph_id": "jonesp15.csv",
+                "parameters_id": null,
+                "data_id": "jonesp15_discrete_loglin.csv",
+                "seed_range": null
             }
         ],
         "evaluation": {
@@ -85,7 +85,7 @@
             "bandmat": [
                 {
                     "id": "AR2",
-                    "bandwidth": 2,
+                    "bandwidth": 3,
                     "dim": 10
                 }
             ],
@@ -128,9 +128,9 @@
                     "beta": 0.5,
                     "radii": 80,
                     "N": [
-                        50
+                        30, 50
                     ],
-                    "M": 500,
+                    "M": 10000,
                     "pseudo_obs": 1
                 },
                 {
