--- a/config/config_sample.json
+++ b/config/config_sample.json
@@ -13,10 +13,10 @@
                 "greenthomas"
             ],
             "mcmc_traj_plots": [
-                "trilearn_loglin"
+                "gg99_fortran", "trilearn_loglin"
             ],
             "mcmc_heatmaps": [
-                "trilearn_loglin"
+                "gg99_fortran","trilearn_loglin"
             ],
             "adjmat_plots": [
                 "greenthomas",
@@ -27,7 +27,7 @@
                 "guidicigreen"
             ],
             "autocorr_plots": [
-                "trilearn_loglin"
+                "gg99_fortran","trilearn_loglin"
             ]
         }
     },
@@ -229,6 +229,12 @@
                     "n_samples": 100000,
                     "randomits": 1000,
                     "penalty": 0
+                }
+            ],
+            "gg_singlepair_fortran": [
+                {
+                    "id": "gg99_fortran",
+                    "n": 100000
                 }
             ],
             "fges": [
