--- a/config/config_sample.json
+++ b/config/config_sample.json
@@ -10,7 +10,7 @@
         ],
         "evaluation": {
             "ROC": [
-                "greenthomas"
+                "greenthomas", "glasso"
             ],
             "mcmc_traj_plots": [
                 "gg99_fortran", "trilearn_loglin"
@@ -19,10 +19,11 @@
                 "gg99_fortran","trilearn_loglin"
             ],
             "adjmat_plots": [
-                "greenthomas",
-                "guidicigreen"
+
+                "glasso"
             ],
             "graph_plots": [
+                "glasso",
                 "greenthomas",
                 "guidicigreen"
             ],
@@ -141,6 +142,18 @@
                     "N": 50,
                     "M": 300,
                     "pseudo_obs": 1
+                }
+            ],
+            "glasso":[
+                {
+                    "id":"glasso",
+                    "mode":"cd",
+                    "alpha": 0.01,
+                    "tol": 0.0004,
+                    "enet_tol": 0.0004,
+                    "max_iter": 100,
+                    "verbose": false,
+                    "assume_centered":false
                 }
             ],
             "blip": [
