--- a/config/config_sample.json
+++ b/config/config_sample.json
@@ -2,10 +2,10 @@
     "benchmark_setup": {
         "data": [
             {
-                "graph_id": "greenthomas2013_ar2.csv",
-                "parameters_id": null,
-                "data_id": "greenthomas2013_decomposable_gic_n50_p400.csv",
-                "seed_range": null
+                "graph_id": "AR1-5",
+                "parameters_id": "intra-class",
+                "data_id": "iid1000",
+                "seed_range": [1, 1]
             }
         ],
         "evaluation": {
@@ -13,10 +13,10 @@
                 "greenthomas-cont", "glasso"
             ],
             "mcmc_traj_plots": [
-                "gg99_fortran", "trilearn_loglin"
+                "trilearn-disc"
             ],
             "mcmc_heatmaps": [
-                "gg99_fortran","trilearn_loglin"
+                "trilearn-cont"
             ],
             "adjmat_plots": [
                 "glasso", "greenthomas-cont", "guidicigreen-cont"
@@ -26,7 +26,7 @@
                 "guidicigreen-cont"
             ],
             "autocorr_plots": [
-                "gg99_fortran","trilearn_loglin"
+                "gg99_fortran","trilearn-disc"
             ]
         }
     },
@@ -85,7 +85,7 @@
                 {
                     "id": "AR2",
                     "bandwidth": 2,
-                    "dim": 50
+                    "dim": 5
                 }
             ],
             "rand_bandmat": [
@@ -135,7 +135,20 @@
         "structure_learning_algorithms": {
             "trilearn_loglin": [
                 {
-                    "id": "trilearn_loglin",
+                    "id": "trilearn-cont",
+                    "datatype": "continuous",
+                    "alpha": 0.5,
+                    "beta": 0.5,
+                    "radii": 80,
+                    "N": [
+                        50
+                    ],
+                    "M": 100,
+                    "pseudo_obs": 1
+                },
+                {
+                    "id": "trilearn-disc",
+                    "datatype": "discrete",
                     "alpha": 0.5,
                     "beta": 0.5,
                     "radii": 80,
@@ -146,7 +159,8 @@
                     "pseudo_obs": 1
                 },
                 {
-                    "id": "trilearn_loglin05",
+                    "id": "trilearn05-disc",
+                    "datatype": "discrete",
                     "alpha": 0.5,
                     "beta": 0.5,
                     "radii": 80,
